--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     },
     "homepage": "https://github.com/kheemchand786/hello-world-express-server#readme",
     "dependencies": {
-        "express": "^4.18.1"
+        "cors": "^2.8.5",
+        "cros": "^1.0.1",
+        "express": "^4.18.1",
+        "i": "^0.3.7"
     }
 }
